[gd_scene load_steps=6 format=3 uid="uid://buelrokqbgl4p"]

[ext_resource type="Script" path="res://scripts/enemies/swordfish.gd" id="1_vkro4"]
[ext_resource type="PackedScene" uid="uid://cug25e425ovsl" path="res://scenes/components/health_component.tscn" id="2_1pae8"]
[ext_resource type="Texture2D" uid="uid://fec5hh623b3x" path="res://assets/sprites/enemies/swordfish.png" id="3_ngxss"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bhtjw"]
radius = 31.1448

[sub_resource type="CircleShape2D" id="CircleShape2D_vb1tc"]
radius = 636.007

[node name="Swordfish" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_vkro4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bhtjw")

[node name="HealthComponent" parent="." instance=ExtResource("2_1pae8")]
max_health = 2

[node name="Agro" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agro"]
shape = SubResource("CircleShape2D_vb1tc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_ngxss")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_death"]
[connection signal="area_entered" from="Agro" to="." method="_on_agro_entered"]
[connection signal="area_exited" from="Agro" to="." method="_on_agro_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_entered_screen"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
